# cloud-logger

./: README.md  pyproject.toml
azure_logger/: __init__.py
cloud_logger/: __init__.py
tests/: test_s3.py
