[tool.poetry]
name = "cloud-logger"
version = "0.2.0"
description = "A simple logger to write to s3 or azure blob storage"
authors = ["Jesse Anderson <jesse.anderson@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cloud_logger"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-storage-blob = ">=12"
s3fs = "^2024.6.1"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
